# HFT

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build_tests.sh  config_build.sh
lib/datastructures/: lfqueuelib.h
lib/logger/: loggerlib.h
lib/memory/: memlib.h
lib/network/: socketlib.h  socketlib_old.h  tcpclientlib.h  tcpserverlib.h
lib/thread/: threadlib.h
tests/: CMakeLists.txt
tests/lib/: testlfqueuelib.cpp  testloggerlib.cpp  testmemlib.cpp  testnetworklib.cpp  testthreadlib.cpp
